--- a/1_cv/index.html
+++ b/1_cv/index.html
@@ -7,6 +7,9 @@
   <body>
     Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
 
-    Pepa je malý pejsek
+ 
+    Element "p" představuje značku v html na vytvoření odstavce.
+
+    
   </body>
 </html>
