--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
 
+<!DOCTYPE html>
+<html lang="cs">
+  <head>
+    <meta charset="utf-8">
+    <title>Lorem ipsum</title>
+  </head>
+  <body>
+    Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+
+ 
+    Element "p" představuje značku v html na vytvoření odstavce.
+
+    
+  </body>
+</html>
