Druhé civčení splněné úkoly

--- a/2_cv/index.html
+++ b/2_cv/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="cs">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">  
-    <title>Druhá stránka</title>
-    <link rel="stylesheet" href="css.css">
-</head>
-<body>
-    
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quaerat ab laudantium blanditiis excepturi at odio libero nostrum delectus voluptatem doloremque! Expedita nulla eum, at consequatur ipsum odit praesentium sint nihil.</p>
-    <p class="uprostred">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga atque natus, odit sint, doloremque provident corporis praesentium temporibus aperiam, reprehenderit nam voluptatibus eaque minus eius assumenda voluptatem voluptate nobis eligendi?</p>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates accusamus assumenda in nam illum expedita nihil atque? Officia a recusandae maxime qui quam quasi dolorum repellat, porro nam cum explicabo?</p>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>2 cvičení</title>
+  </head>
+  <body>
+    <h1>Druhé cvičení</h1>
 
-
-        <a href="#">pepa</a>
-</body>
+    <ul>
+      <li><a href="ukol1.html">ukol1</a></li>
+      <li><a href="ukol2.html">ukol2</a></li>
+      <li><a href="ukol3.html">ukol3</a></li>
+    </ul>
+  </body>
 </html>
