--- a/index.html
+++ b/index.html
@@ -7,5 +7,13 @@
 </head>
 <body>
     Tento web je zaměřen na proklikávání na projekty tvorba webových stránek.
+
+
+    <ul>
+        <li><a href="1_cv/index.html">První cvičení</a></li>
+        <li><a href="2_cv/index.html">Druhé cvičení</a></li>
+        <li><a href=""></a></li>
+    </ul>
+
 </body>
 </html>
