--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <ul>
         <li><a href="1_cv/index.html">První cvičení</a></li>
         <li><a href="2_cv/index.html">Druhé cvičení</a></li>
-        <li><a href=""></a></li>
+        <li><a href="3_cv/index.html">Třetí cvičení</a></li>
     </ul>
 
 </body>
