--- a/3_cv/index.html
+++ b/3_cv/index.html
@@ -12,7 +12,7 @@
         <li><a href="ukol1.html">Úkol 1</a></li>
         <li><a href="ukol2.html">Úkol 2</a></li>
         <li><a href="ukol3.html">Úkol 3</a></li>
-        <li><a href=""></a></li>
+        <li><a href="ukol4.html">Úkol 4</a></li>
     </ul>
 
 </body>
