--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <li><a href="1_cv/index.html">První cvičení</a></li>
         <li><a href="2_cv/index.html">Druhé cvičení</a></li>
         <li><a href="3_cv/index.html">Třetí cvičení</a></li>
+        <li><a href="4_cv/index.html">Čtvrté cvičení</a></li>
     </ul>
 
 </body>
