--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <li><a href="2_cv/index.html">Druhé cvičení</a></li>
         <li><a href="3_cv/index.html">Třetí cvičení</a></li>
         <li><a href="4_cv/index.html">Čtvrté cvičení</a></li>
-        <li><a href="T_cv/index.html">Páté cvičení</a></li>
+        <li><a href="5_cv/index.html">Páté cvičení</a></li>
     </ul>
 
 </body>
