--- a/5_cv/index.html
+++ b/5_cv/index.html
@@ -11,6 +11,7 @@
     <ul>
         <li><a href="ukol1.html">Úkol 1</a></li>
         <li><a href="ukol2.html">Úkol 2</a></li>
+        <li><a href="ukol3.html">Úkol 3</a></li>
 
     </ul>
 
