--- a/5_cv/ukol3.html
+++ b/5_cv/ukol3.html
@@ -1,34 +1,35 @@
 <!DOCTYPE html>
 <html lang="cs">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="ukol3.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="ukol3.css" />
     <title>Úkol číslo 3</title>
-</head>
-<body>
-
-
+  </head>
+  <body>
     <div class="container">
-        <div class="header item">
-            <h2>Header</h2>
+      <div class="header item">
+        <div class="obrazek">
+          <img src="obr/logo.webp" alt="logo" />
         </div>
-        <div class="sidebar item">
-            sidebard
+        <div class="admin_name">
+            <h2>Admin panel</h2>
         </div>
-        <div class="cont_main item">
-            <div class="item item_main first_row first_col">
-                A
-            </div>
-            <div class="item item_main first_row second_col">
-                B
-            </div>
+        <div class="profile">
+            <a href="#">Odhlásit se</a>
         </div>
-        <div class="footer item">
-            footer
-        </div>
-    </div>
+      </div>
+      <div class="sidebar item">sidebard</div>
+      <div class="cont_main item">
+        <div class="item item_main">A</div>
 
-    
-</body>
+        <div class="item item_main">B</div>
+        <div class="item item_main">C</div>
+
+        <div class="item item_main">D</div>
+        <div class="item item_main">E</div>
+      </div>
+      <div class="footer item">footer</div>
+    </div>
+  </body>
 </html>
