--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     Tento web je zaměřen na proklikávání na projekty tvorba webových stránek.
 
+    <a href="zapocet/index.html">Zápočet</a>
 
     <ul>
         <li><a href="1_cv/index.html">První cvičení</a></li>
@@ -15,6 +16,7 @@
         <li><a href="3_cv/index.html">Třetí cvičení</a></li>
         <li><a href="4_cv/index.html">Čtvrté cvičení</a></li>
         <li><a href="5_cv/index.html">Páté cvičení</a></li>
+        <li><a href="6_cv/index.html">Šesté cvičení</a></li>
     </ul>
 
 </body>
