--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <li><a href="4_cv/index.html">Čtvrté cvičení</a></li>
         <li><a href="5_cv/index.html">Páté cvičení</a></li>
         <li><a href="6_cv/index.html">Šesté cvičení</a></li>
+        <li><a href="7_cv/index.html">Sedmé cvičení</a></li>
     </ul>
 
 </body>
