--- a/index.html
+++ b/index.html
@@ -20,5 +20,7 @@
         <li><a href="7_cv/index.html">Sedmé cvičení</a></li>
     </ul>
 
+<a href="funkce.xlsx">Sedmé cvičení</a>
+    
 </body>
 </html>
