--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <li><a href="5_cv/index.html">Páté cvičení</a></li>
         <li><a href="6_cv/index.html">Šesté cvičení</a></li>
         <li><a href="7_cv/index.html">Sedmé cvičení</a></li>
+        <li><a href="novy.html">Nový index</a></li>
     </ul>
 
 <a href="funkce.xlsx">Sedmé cvičení</a>
