--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                                 <img src="img/upol-logo.png" alt="OA-logo" class="card-logo">
 
                                 <h4 class="heading-card">
-                                    <i class="fas fa-school"></i> OAVM
+                                    <i class="fas fa-school"></i> UPOL
                                 </h4>
 
                                 <span class="obor">
@@ -89,7 +89,7 @@
                                 </span>
 
                                 <span class="study-type">
-                                    <i class="fas fa-graduation-cap"></i> Bakalřáské studium
+                                    <i class="fas fa-graduation-cap"></i> Bakalařské studium
                                 </span>
 
                                 <div class="study-time">
