--- a/stary.html
+++ b/stary.html
@@ -11,17 +11,11 @@
     <a href="zapocet/index.html">Zápočet</a>
 
     <ul>
-        <li><a href="1_cv/index.html">První cvičení</a></li>
-        <li><a href="2_cv/index.html">Druhé cvičení</a></li>
-        <li><a href="3_cv/index.html">Třetí cvičení</a></li>
-        <li><a href="4_cv/index.html">Čtvrté cvičení</a></li>
-        <li><a href="5_cv/index.html">Páté cvičení</a></li>
-        <li><a href="6_cv/index.html">Šesté cvičení</a></li>
-        <li><a href="7_cv/index.html">Sedmé cvičení</a></li>
-        <li><a href="zkouska/index.html">Nový index</a></li>
+        <li><a href="zapocet/index.html">Zápočet</a></li>
+        <li><a href="zkouska/index.html">Zkouška</a></li>
     </ul>
 
-<a href="funkce.xlsx">Sedmé cvičení</a>
+
     
 </body>
 </html>
